2005-12-15 aurel
* Change the name
BusinessTemplate_installationChoice,
BusinessTemplate_diffTwoObjects, TemplateTool_diffBusinessTemplate
to BusinessTemplate_viewInstallationDialog,
BusinessTemplate_viewObjectsDiff, TemplateTool_viewDiff

2005-12-15 yo
* Change the names TemplateTool_downloadBusinessTemplate and TemplateTool_importBusinessTemplate to TemplateTool_viewDownloadBusinessTemplateDialog and  ERP5 Form
TemplateTool_viewImportBusinessTemplateDialog respectively, according to the naming convention.

2005-12-14 yo
* Resource_zGetInventory and Resource_zGetInventoryList must use stock.mirror_node_uid instead of inventory_movement.destionation_uid.

2005-12-14 aurel
* fix naming convention
* set default value of form_id in Base_cancel

2005-12-13 aurel
* Update way of install Business Template
- add Trash type
- modify Workflow_statusModiify
- add Forms and Scripts in erp5_core
* Change in script of rule_interraction_workflow

2005-12-13 romain
* Fix Base_edit (when displaying multiple matrixbox)

2005-12-08 yo
* Fix the LEFT JOIN syntax in Resource_zGetInventory and Resource_zGetInventoryList.

2005-12-08 Kevin
* Transform tuple to list to let ERP5Type_asSecurityGroupId do a sort.

2005-12-07 yo
* New skins: erp5_html.css and  form_html for PDF editing.

2005-12-04 Jean-Paul
* Made a minimal and somehow broken implementation of global search box (top right) to prevent displaying uggly search results. Improving it requires redirection and filtering

2005-11-25 Jérome
* hook manage_afterClone in rule_interraction workflow,  as "Later Script" (ie activity) because it is called too soon and some scripts are not available yet.

2005-11-30 yo
* portal_assignment_base_category_list is removed.
* Portal Types are modified for groups.

2005-11-30 yo
* BaseCategory_view supports category types.

2005-11-30 yo
* AccountingPreferences_view uses my_preferred_accounting_transaction_gap instead of my_gap.

2005-11-25 Jérome