@@ -427,7 +427,7 @@
                 </item>
                 <item>
                     <key> <string>lines</string> </key>
-                    <value> <int>5000</int> </value>
+                    <value> <int>0</int> </value>
                 </item>
                 <item>
                     <key> <string>list_action</string> </key>
@@ -503,7 +503,7 @@
                 </item>
                 <item>
                     <key> <string>title</string> </key>
-                    <value> <string>Select Objects Action</string> </value>
+                    <value> <string>Select Actions</string> </value>
                 </item>
                 <item>
                     <key> <string>url_columns</string> </key>
